--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@octokit/core": "^6.1.2",
     "@octokit/types": "^13.5.0",
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
